--- a/EmployeeExam/Views/Home/Index.cshtml
+++ b/EmployeeExam/Views/Home/Index.cshtml
@@ -2,7 +2,44 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img-top" src="~/Image/1.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Закон «Об охране труда»</h5>
+                    <p class="card-text">
+                        Закон направлен на регулирование общественных отношений в области охраны труда и реализацию установленного Конституцией Республики Беларусь права граждан на здоровые и безопасные условия труда
+                        С момента утверждения в него дважды вносились изменения и дополнения. Последние (от 18 декабря 2019 г. № 274-З) вступили в силу 28 июня 2020 года.
+                    </p>
+                    <a href="https://kodeksy-by.com/zakon_rb_ob_ohrane_truda.htm" class="btn btn-primary">Подробно</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img-top" src="~/Image/2.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Закон «О пожарной безопасности»</h5>
+                    <p class="card-text">
+                        Настоящий Закон определяет правовую основу и принципы организации системы пожарной безопасности и государственного пожарного надзора в Республике Беларусь, действующих в целях защиты от пожаров жизни и здоровья людей, национального достояния, всех видов собственности и экономики Республики Беларусь. Законом  Республики Беларусь от 11 ноября 219 г. № 251-З  приняты изменения в Закон Республики Беларусь "О пожарной безопасности", вступили в силу с 24 мая 2020 года
+                    </p>
+                    <a href="https://kodeksy-by.com/zakon_rb_o_pozharnoj_bezopasnosti.htm" class="btn btn-primary">Подробно</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img-top" src="~/Image/3.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">
+                        Международная организация труда объявила 28 апреля Всемирным днем охраны труда для привлечения внимания мировой общественности к масштабам проблемы, а также к тому, каким образом создание и продвижение культуры охраны труда может способствовать снижению ежегодной смертности на рабочем месте. Впервые он отмечался в 2003 году.
+                        Идея проведения Всемирного дня охраны труда берет начало от Дня памяти погибших работников, впервые проведенного американскими и канадскими трудящимися в 1989 году в память о работниках, погибших и пострадавших на работе.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
