--- a/EmployeeExam/Views/_ViewImports.cshtml
+++ b/EmployeeExam/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EmployeeExam
 @using EmployeeExam.Models
+@using EmployeeExam.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
