--- a/EmployeeExam/Views/Shared/_Layout.cshtml
+++ b/EmployeeExam/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="Exam">Экзамен</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Questions" asp-action="Index">Вопросы</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Protocol" asp-action="Index">Протокол</a>
                         </li>
                         <li class="dropdown nav-item">
                             <a id="drop1" class="nav-link text-dark dropdown-toggle" data-toggle="dropdown" href="#">Ввод данных</a>
@@ -47,7 +47,7 @@
                         <li class="dropdown nav-item">
                             <a id="drop1" class="nav-link text-dark dropdown-toggle" data-toggle="dropdown" href="#">Статистика</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Вопросы</a></li>
+                                <li><a asp-area="" asp-controller="Debtor" asp-action="Index">Сдающие экзамен</a></li>
                                 <li><a href="#">Сотрудники</a></li>
                                 <li><a href="#">Комиссии</a></li>
                                 <li class="divider"></li>
