--- a/EmployeeExam/Views/Debtor/Dept.cshtml
+++ b/EmployeeExam/Views/Debtor/Dept.cshtml
@@ -1,76 +1,57 @@
-﻿@model IEnumerable<EmployeeExam.Data.Entities.Employee>
+﻿@model IEnumerable<EmployeeExam.Data.Entities.TempEmployee>
+@{ 
+    DateTime data = (DateTime)ViewData["Data"];
+}
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <h3>Сотрудники, сдающие экзамен @data.ToString("d").</h3>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Tabel_id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FIO)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Date)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Notes)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.passed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.need_print)
-            </th>
-            <th>
+           
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.dep_id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.title_id)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.NamberComission)
-            </th>
-            <th></th>
+            </th>           
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td class="text-center">
                 @Html.DisplayFor(modelItem => item.Tabel_id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FIO)
             </td>
-            <td>
+            <td class="text-center">
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Notes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.passed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.need_print)
-            </td>
-            <td>
+            
+            <td class="text-center">
                 @Html.DisplayFor(modelItem => item.dep_id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.title_id)
             </td>
-            <td>
+            <td class="text-center">
                 @Html.DisplayFor(modelItem => item.NamberComission)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Employee_id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Employee_id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Employee_id">Delete</a>
-            </td>
+            </td>            
         </tr>
 }
     </tbody>
