--- a/EmployeeExam/Views/Questions/Create.cshtml
+++ b/EmployeeExam/Views/Questions/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Создать</h1>
 
-<h4>Question</h4>
+<h4>Вопрос</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -48,13 +48,13 @@
                 <span asp-validation-for="Reference" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
