--- a/EmployeeExam/Views/Titles/Details.cshtml
+++ b/EmployeeExam/Views/Titles/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Детализация</h1>
 
 <div>
-    <h4>Title</h4>
+    <h4>Должность</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -38,5 +38,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.title_id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">К списку</a>
 </div>
