--- a/EmployeeExam/Views/Test/_TestPartial.cshtml
+++ b/EmployeeExam/Views/Test/_TestPartial.cshtml
@@ -49,25 +49,25 @@
 
 @*<form asp-action="_TestPartial" asp-controller="Test" method="get">*@
 
-    <label class="font_medium badge badge-light text-wrap border border-primary form-check-label">@Html.DisplayFor(modelItem => quest.Quest)</label>
+    <label class="font_medium badge badge-light text-wrap border border-primary form-check-label h3">@Html.DisplayFor(modelItem => quest.Quest)</label>
 
     <div class="form-check">
         <input class="form-check-input" type="radio" name="answer" id="Radios1" value="1" checked>
-        <label class="font_medium badge badge-light text-wrap border border-info form-check-label text-justify" for="Radios1">
+        <label class="font_medium badge badge-light text-wrap border border-info form-check-label text-justify h3" for="Radios1">
             @Html.DisplayFor(odelItem => quest.Variant1)
         </label>
     </div>
 
     <div class="form-check">
         <input class="form-check-input" type="radio" name="answer" id="Radios2" value="2">
-        <label class="font_medium badge badge-light text-wrap border border-info form-check-label text-justify" for="Radios2">
+        <label class="font_medium badge badge-light text-wrap border border-info form-check-label text-justify h3" for="Radios2">
             @Html.DisplayFor(odelItem => quest.Variant2)
         </label>
     </div>
 
     <div class="form-check">
         <input class="form-check-input" type="radio" name="answer" id="Radios3" value="3">
-        <label class="font_medium badge badge-light text-wrap border border-info form-check-label text-justify" for="Radios3">
+        <label class="font_medium badge badge-light text-wrap border border-info form-check-label text-justify h3" for="Radios3">
             @Html.DisplayFor(odelItem => quest.Variant3)
         </label>
     </div>
