--- a/EmployeeExam/Views/Shared/_Layout.cshtml
+++ b/EmployeeExam/Views/Shared/_Layout.cshtml
@@ -23,11 +23,16 @@
         TH {
             background: #b0e0e6; /* Цвет фона */
         }
+        .img-fluid {
+            background: url(image/17973908.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     </style>
     <script src="https://unpkg.com/vue"></script>
 
 </head>
-<body>
+<body class="img-fluid">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
