--- a/EmployeeExam/Views/Shared/_LoginPartial.cshtml
+++ b/EmployeeExam/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,10 @@
 else
 {
     <li class="nav-item">
+        @if(User.Identity.IsAuthenticated)
+        {
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
+        }
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Вход</a>
